[tool.poetry]
name = "mlda-4th-year"
version = "0.1.0"
description = ""
authors = ["Vlad Kishkin <vladkishkin1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
pandas = "^2.1.2"
notebook = "^7.0.6"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
